apps/seafile/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: seafile
  namespace: seafile
  labels:
    app.kubernetes.io/name: seafile
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: seafile
