apps/seafile/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: seafile
  namespace: seafile
spec:
  parentRefs:
    - name: shared
      namespace: gateway
      sectionName: https
  hostnames:
    - drive.lilalala.com
  rules:
    - backendRefs:
        - name: seafile
          port: 80
      timeouts:
        # Large file uploads / syncs.
        request: "0s"
        backendRequest: "0s"
